--- a/home.html
+++ b/home.html
@@ -22,29 +22,33 @@
 		</header>
 		<main>
 			<section id="galleria">
-				<h1><i>(</i>Welcome to Aarhus!<i>)</i></h1>
+				<h1><i>( </i>Welcome to Aarhus<i> )</i></h1>
 			</section>
-			<section>
+			<section class="overview-1">
 				<h2>Overview</h2>
 				<article>
 					<header>
 						<h3>Architecture</h3>
+						<i class="icon-building icon-large"></i>
 					</header>
-					<div>
+					<div class="background-image img-01">
+						
 					</div>
 				</article>
 				<article>
 					<header>
-						<h3> </h3>
+						<h3>Art</h3>
+						<i></i>
 					</header>
-					<div>
+					<div class="background-image img-02">
 					</div>
 				</article>
 				<article>
 					<header>
-						<h3></h3>
+						<h3>History</h3>
+						<i></i>
 					</header>
-					<div>
+					<div class="background-image img-03">
 					</div>
 				</article>
 			</section>
